<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            tools:ignore="UselessParent"
            >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/card">
                    <EditText
                        android:id="@+id/email_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:autofillHints=""
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress">
                    </EditText>
                    <EditText
                        android:id="@+id/password_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:hint="@string/password_hint"
                        android:inputType="textPassword">
                    </EditText>
                    <EditText
                        android:id="@+id/confirmPassword_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:hint="@string/confirmPassword_hint"
                        android:inputType="textPassword">
                    </EditText>
                    <Button
                        android:id="@+id/registerMail_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/register_button"
                        android:layout_marginTop="16dp">
                    </Button>
                </LinearLayout>
            </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>